--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="BBb-XS-zz6" id="Hlu-SH-Z42"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="fcY-Xy-WWI"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="fcY-Xy-WWI">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="L5V-8W-pmb">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="BBb-XS-zz6" id="dGA-HV-BC9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IKf-4X-SV4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
